--- a/app/views/convicts/show.html.erb
+++ b/app/views/convicts/show.html.erb
@@ -11,8 +11,8 @@
   <h3>Other Information</h3>
   <p>
   <strong>Boat:</strong> <%= link_to @convict.boat, convicts_path(:boat =>  @convict.boat) %><br/>
-  <strong>Departed:</strong> <%= link_to @convict.departure_date, convicts_path(:year =>  @convict.departure_year) %><br/>
-  <strong>Destination:</strong> <%= link_to @convict.destination, convicts_path(:destination =>  @convict.destination) %><%= ", #{@convict.destination_state}" unless @convict.destination_state.nil? %><br/>
+  <strong>Departed:</strong> <%= @convict.departure_date.blank? ? 'Unknown' : link_to(@convict.departure_date, convicts_path(:year =>  @convict.departure_year)) %><br/>
+  <strong>Destination:</strong> <%= @convict.destination.blank? ? 'Unknown' : link_to(@convict.destination, convicts_path(:destination =>  @convict.destination)) %><%= ", #{@convict.destination_state}" unless @convict.destination_state.nil? %><br/>
   <strong>Court:</strong> <%= @convict.court %> <% unless @convict.court_county.blank? %> in <%= link_to @convict.court_county, convicts_path(:court_county =>  @convict.court_county) %> <% end %><br/>
   <strong>Term:</strong> <%= @convict.term =~ /^\d+$/ ? pluralize(@convict.term.to_i, 'year') : @convict.term.titleize %>
   </p>
