--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -63,19 +63,23 @@
 .graphs-container {
   clear:both;
   position: relative;
-  height: 410px;
+  height: 430px;
 }
 
 #top-boats-graph-container {
   width: 450px;
   position: absolute;
-  right: 10px;
+  left: 5px;
   top 5px;  
 }
 
 #boats-bubble-graph-container {
   width: 450px;
   position: absolute;
-  left: 5px;
+  right: 10px;
   top 5px;
+}
+
+p.notes {
+  font-style:italic;
 }
