--- a/app/views/data/destinations.html.erb
+++ b/app/views/data/destinations.html.erb
@@ -60,7 +60,7 @@
   </script>
 
   <div id="destinations-map-container" class="widget">
-    <h3 class="widget-section-title widget-title-graph-icon">Convict Destinations Map</h3>
+    <h3 class="widget-section-title widget-title-map-icon">Convict Destinations Map</h3>
     <div id="destinations-map">Loading ...</div>
   </div>
 
