--- a/app/views/convicts/index.html.erb
+++ b/app/views/convicts/index.html.erb
@@ -12,7 +12,7 @@
     <% if params[:boat] %>
       Convicts on boat <%= params[:boat] %>
     <% elsif params[:destination] %>
-      Convicts going to <%= params[:destination] %>
+      Convicts bound for <%= params[:destination] %>
     <% elsif params[:departure_year] %>
       Convicts departing in <%= params[:departure_year] %>
     <% elsif params[:court_county] %>
