style court counties page add bar graph

--- a/app/views/data/destinations.html.erb
+++ b/app/views/data/destinations.html.erb
@@ -120,7 +120,7 @@ $(document).ready(function() {
          tooltip: {
          formatter: function() {
             return '<b>'+ this.series.name +'</b><br/>'+ 
-               this.point.name +': '+ this.y +' convicts';
+               this.point.name +': '+ Highcharts.numberFormat(this.y, 0, ',') +' convicts';
          }
       },
        series: [{
