--- a/app/views/data/court_counties.html.erb
+++ b/app/views/data/court_counties.html.erb
@@ -1,5 +1,14 @@
 <% content_for :head do %>
   <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script> 
+
+  <%= javascript_include_tag 'highcharts' %>
+
+  <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.9.0/build/datatable/assets/skins/sam/datatable.css" /> 
+  <script type="text/javascript" src="http://yui.yahooapis.com/2.9.0/build/json/json-min.js"></script> 
+  <script type="text/javascript" src="http://yui.yahooapis.com/2.9.0/build/element/element-min.js"></script> 
+  <script type="text/javascript" src="http://yui.yahooapis.com/2.9.0/build/datasource/datasource-min.js"></script> 
+  <script type="text/javascript" src="http://yui.yahooapis.com/2.9.0/build/event-delegate/event-delegate-min.js"></script> 
+  <script type="text/javascript" src="http://yui.yahooapis.com/2.9.0/build/datatable/datatable-min.js"></script>
 <% end %>
 
 <% content_for :page_header do %>
@@ -8,9 +17,79 @@
   </h2>
 <% end %>
 
-<div class="bordered" style="clear: both;">
-  <div id="map_canvas" style="width: 300px; height: 450px"></div> 
-</div>
+<div id="court-counties-page-container">
+
+  <div id="top-conviction-container" class="widget">
+    <h3 class="widget-section-title widget-title-graph-icon">Top Conviction Locations</h3>
+    <div id="top-conviction-chart">Loading ...</div>
+  </div>
+
+  <script>
+$(document).ready(function() {
+   new Highcharts.Chart({
+      chart: {
+         renderTo: 'top-conviction-chart',
+         defaultSeriesType: 'bar',
+         height: 470
+      },
+      title: {
+         text: null
+      },
+      credits: {
+        enabled: false
+      },    
+      xAxis: {
+         categories: <%= raw @top_counties.collect { |m| m[:court_county] }.to_json %>,
+         title: {
+            text: 'Counties'
+         },
+      },
+      yAxis: {
+         min: 0,
+         title: {
+            text: 'Convicts',
+            align: 'high'
+         },
+        endOnTick: false
+      },
+      tooltip: {
+         formatter: function() {
+            return ''+
+                this.series.name +': ' + Highcharts.numberFormat(this.y, 0, ',') + ' convicts';
+         }
+      },
+      plotOptions: {
+         bar: {
+            dataLabels: {
+               enabled: true
+            }
+         }
+      },
+      legend: {
+         layout: 'vertical',
+         align: 'right',
+         verticalAlign: 'top',
+         x: -10,
+         y: 370,
+         floating: true,
+         borderWidth: 1,
+         backgroundColor: '#FFFFFF',
+         shadow: true
+      },
+      series: [{
+         name: 'Convicts',
+         data: <%= raw @top_counties.collect { |m| m[:convicts] }.to_json %>
+      }]
+   });
+   
+   
+});
+</script>    
+
+  <div id="counties-map-container" class="widget">
+    <h3 class="widget-section-title widget-title-map-icon">Conviction Locations Map</h3>
+    <div id="map_canvas" style="width: 320px; height: 450px">Loading ...</div> 
+  </div>
 
 <script>
   
@@ -39,19 +118,45 @@
 </script>
 
 
-  <table>
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Convicts</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @counties.each do |county_map| %>
-        <tr>
-          <td><%= link_to(county_map[:court_county], convicts_path(:court_county => county_map[:court_county])) %></td>
-          <td><%= county_map[:convicts] %></td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
+  <div id="courty-table-container" class="widget">
+    <h3 class="widget-section-title widget-title-table-icon">Browse By Conviction County</h3>
+    <div id="data-table">Loading ...</div>
+  </div>
+
+  <script>
+    YAHOO.util.Event.addListener(window, "load", function() {
+            var tableData = <%= raw @counties.to_json %>;
+
+            var columnDefs = [
+                {key:"court_county", label: "Court Counties", sortable:true, resizeable:true},
+                {key:"convicts", label: "Convicts", formatter: "number", sortable:true, resizeable:true}
+            ];
+     
+            var tableDS = new YAHOO.util.DataSource(tableData);
+            tableDS.responseType = YAHOO.util.DataSource.TYPE_JSARRAY;
+            tableDS.responseSchema = {
+                fields: ["court_county", "convicts"]
+            };
+
+            var dataTable = new YAHOO.widget.DataTable("data-table",
+              columnDefs, tableDS, {sortedBy : {key:"court_county", dir: 'desc'}});
+
+            //Hightlight row on mouse hover
+            dataTable.subscribe("rowMouseoverEvent", dataTable.onEventHighlightRow);
+            dataTable.subscribe("rowMouseoutEvent", dataTable.onEventUnhighlightRow);
+
+            //Handle user clicking on a row
+            dataTable.subscribe("rowClickEvent", function(oArgs){
+              var elTarget = oArgs.target;
+              var oRecord = this.getRecord(elTarget);
+              window.location.href = '/convicts/?court_county=' + oRecord.getData("court_county");
+            }); 
+
+            return {
+                oDS: tableDS,
+                oDT: dataTable
+            };
+    });
+  </script>
+
+</div>
