add home and about place holders

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
               <li><a href="/data/departure_dates" title="Departure Dates">Dates</a></li>
               <li><a href="/data/court_counties" title="Court Counties">Counties</a></li>
               
-              <li class="page_item page-item-2"><a href="/about" title="About">About</a></li>
+              <li class="page_item page-item-2"><a href="/home/about" title="About">About</a></li>
             </ul>
           </div> <!-- #navigation .two-of-two -->
         </div> <!-- #header-top .row -->
