--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,13 @@
+<% content_for :head do %>
+  <%= javascript_include_tag 'highcharts' %>
+
+  <script type='text/javascript' src='https://www.google.com/jsapi'></script>
+  <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+
+  <%= javascript_include_tag 'protovis-r3.2' %>
+<% end %>
+
+
 <% content_for :page_header do %>
   <div id="text-3" class="widget widget_text">			
     <div class="textwidget">
@@ -6,6 +16,11 @@
 	</div>
 <% end %>
 
-<div class="clear: both;">
-  TODO Graphs and stuff here
+<div id="home-page-container">
+  <%= render :partial => '/data/departure_year_graph' %>
+
+  <%= render :partial => '/data/top_boats_chart' %>
+
+  <%= render :partial => '/data/destinations_map', :locals => { :map_width => 470, :map_height => 400 }  %>
+
 </div>
