add home page blurb, did some styling

--- a/app/views/data/departure_dates.html.erb
+++ b/app/views/data/departure_dates.html.erb
@@ -14,6 +14,8 @@
   <h2 class="page-title">Departure Date</h2>
 <% end %>
 
+<div id="departure-date-page-container">
+
 <div id="year-table-container" class="widget">
   <h3 class="widget-section-title widget-title-table-icon">Browse By Year</h3>
   <div id="data-table">Loading ...</div>
@@ -194,3 +196,5 @@ $(document).ready(function() {
    });
 });
 </script>
+
+</div>
