--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -2,6 +2,9 @@
   <h2 class="page-title">About</h2>
 <% end %>
 
-<div class="clear: both;">
-  TODO About stuff here
+<div id="about-page-container">
+  <div id="overview-container" class="widget">
+    <h3 class="widget-section-title widget-title-text-icon">Overview</h3>
+    <%= render :partial => 'overview_text' %> 
+  </div>
 </div>
